# smurf-processor

./: .gitignore  CMakeLists.txt  README.SmurfPacket.md  README.md  smurf.cfg  smurf2mce.cfg  smurf2mce_default.cfg  smurf_default.cfg
common/: smurf2mce.h  smurftcp.h
docker/server/: Dockerfile
docker/server/scripts/: start_server.sh
include/: SmurfProcessor.h  common.h  data_buffer.h  smurf_packet.h  smurf_processor.h  smurftcp.h  tes_bias_array.h
include/old/: smurf2mce.h  smurf_packet.h  smurftcp.h  tes_bias_array.h
include/smurf/core/common/: BaseMaster.h  BaseSlave.h  Helpers.h  SmurfHeader.h  SmurfHeaderVector.h  SmurfPacket.h  TesBiasArray.h  Timer.h  module.h
include/smurf/core/conventers/: Header2Smurf.h  module.h
include/smurf/core/counters/: FrameStatistics.h  module.h
include/smurf/core/downsamplers/: Downsampler.h  module.h
include/smurf/core/filter/: Filter.h  module.h
include/smurf/core/filters/: GeneralAnalogFilter.h  module.h
include/smurf/core/mappers/: SmurfChannelMapper.h  module.h
include/smurf/core/processors/: SmurfProcessor.h  module.h
include/smurf/core/reorderer/: Reorderer.h  module.h
include/smurf/core/transmitter/: Transmitter.h  module.h
include/smurf/core/transmitters/: BaseTransmitter.h  module.h
include/smurf/core/unwrappers/: Unwrapper.h  module.h
mcereceiver/: CMakeLists.txt  smurfrec.cfg
mcereceiver/src/: Queue.h  acceptframe_test.cpp  makefile  smurfpipetest.cpp  smurftcp.cpp  smurftcptest.cpp  smurftestserver.cpp
mcetransmit/: .gitignore  CMakeLists.txt  get_versions.sh  joe_run.sh  mask.txt  setup.sh  smurf2mce_default.cfg  smurf_nogui.sh  smurf_run.sh  soft_startup.sh  startup.sh
mcetransmit/scripts/: AmccTESTGui.py  makemask.py  start_server.sh  testMceTransmit.py
mcetransmit/scripts/control-server/: setup_pcie.sh  start_server.sh
mcetransmit/scripts/control-server/python/: pyrogue_server.py
mcetransmit/scripts/python/: pyrogue_server.py
mcetransmit/src/: MceTransmit.cpp  SmurfProcessor.cpp
python/pysmurf/core/common/: _BaseMaster.py  _BaseMasterSlave.py  _BaseSlave.py  __init__.py
python/pysmurf/core/conventers/: _Header2Smurf.py
python/pysmurf/core/counters/: _FrameStatistics.py
python/pysmurf/core/devices/: _PcieCard.py  _SmurfProcessor.py  _SmurfProcessorModular.py  _UdpReceiver.py  __init__.py
python/pysmurf/core/downsamplers/: _Downsampler.py  __init__.py
python/pysmurf/core/filter/: _Filter.py  __init__.py
python/pysmurf/core/filters/: _GeneralAnalogFilter.py  __init__.py
python/pysmurf/core/mappers/: _SmurfChannelMapper.py  __init__.py
python/pysmurf/core/reorderer/: _Reorderer.py  __init__.py
python/pysmurf/core/roots/: CmbPcie.py  _CmbPcie.py
python/pysmurf/core/transmitter/: _Transmitter.py  __init__.py
python/pysmurf/core/transmitters/: _BaseTransmitter.py  __init__.py
python/pysmurf/core/unwrappers/: _Unwrapper.py  __init__.py
scripts/: testSmurfProcessor.py
scripts/control-server/: start_server.sh
scripts/control-server/python/: pyrogue_server.py
server_scripts/: cmb_pcie.py
src/: SmurfProcessor.cpp  common.cpp  data_buffer.cpp  smurf_packet.cpp  smurf_processor.cpp  tes_bias_array.cpp
src/old/: data_buffer.cpp  tes_bias_array.cpp
src/smurf/: module.cpp
src/smurf/core/: CMakeLists.txt  module.cpp
src/smurf/core/common/: BaseMaster.cpp  BaseSlave.cpp  CMakeLists.txt  SmurfHeader.cpp  SmurfHeaderVector.cpp  SmurfPacket.cpp  TesBiasArray.cpp  module.cpp
src/smurf/core/conventers/: Header2Smurf.cpp  module.cpp
src/smurf/core/counters/: FrameStatistics.cpp  module.cpp
src/smurf/core/downsamplers/: CMakeLists.txt  Downsampler.cpp  module.cpp
src/smurf/core/filter/: CMakeLists.txt  Filter.cpp  module.cpp
src/smurf/core/filters/: CMakeLists.txt  GeneralAnalogFilter.cpp  module.cpp
src/smurf/core/mappers/: CMakeLists.txt  SmurfChannelMapper.cpp  module.cpp
src/smurf/core/processors/: SmurfProcessor.cpp  module.cpp
src/smurf/core/reorderer/: CMakeLists.txt  Reorderer.cpp  module.cpp
src/smurf/core/transmitter/: CMakeLists.txt  Transmitter.cpp  module.cpp
src/smurf/core/transmitters/: BaseTransmitter.cpp  CMakeLists.txt  module.cpp
src/smurf/core/unwrappers/: CMakeLists.txt  Unwrapper.cpp  module.cpp
